@@ -1,3 +1,7 @@
+2011-07-26  Harald van Dijk <harald@gigawatt.nl>
+
+	* Avoid imaxdiv when only one of the results is wanted.
+
 2010-07-09  maximilian attems <max@stro.at>
 
 	* Fix klibc DEBUG compilation.
